@@ -3,10 +3,15 @@
 	* inst/examples/standard/rinside_sample9.cpp: new example illustrating 
 	how to expose a C++ function to the embedded R
 	
+	* inst/examples/standard/rinside_module_sample0.cpp: new example illustrating 
+	how to use an Rcpp module from RInside
+
 	* inst/include/*.h: moved the headers to include so that there is only one copy
 	
 	* inst/include/MemBuf.h: change from signature of add to use
 	const std::string& instead of const char* 
+	
+	* src/RInside.cpp: loading the Rcpp package
 
 2010-04-21  Dirk Eddelbuettel  <edd@debian.org>
 
